# GalacticWar

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  create_release.py  galacticwarsetup.iss
app/: CMakeLists.txt  animandsoundeffectmodel.cpp  animandsoundeffectmodel.hpp  animationeffectmodel.cpp  animationeffectmodel.hpp  animationplaneview.cpp  animationplaneview.hpp  backgroundcontroller.cpp  backgroundcontroller.hpp  backgroundeffectmodel.cpp  backgroundeffectmodel.hpp  backgroundmusicplayer.cpp  backgroundmusicplayer.hpp  backgroundview.cpp  backgroundview.hpp  barview.cpp  barview.hpp  bulletmodel.cpp  bulletmodel.hpp  bullettype.hpp  controlplane.cpp  controlplane.hpp  definitions.hpp  enemyconfiguration.hpp  enemycontroller.cpp  enemycontroller.hpp  enemymodel.cpp  enemymodel.hpp  enemymodeltype1.cpp  enemymodeltype1.hpp  enemymodeltype2.cpp  enemymodeltype2.hpp  enemymodeltype3.cpp  enemymodeltype3.hpp  enemymodeltype4.cpp  enemymodeltype4.hpp  enemymodeltype5.cpp  enemymodeltype5.hpp  enemymodeltype6.cpp  enemymodeltype6.hpp  (+87 more)
app/images/: bullet_blue.gal  bullet_enemy2.gal  bullet_enemy3.gal  bullet_enemy4.gal  bullet_enemy5.gal  bullet_enemy6.gal  bullet_enemy7.gal  bullet_enemy8.gal  bullet_enemy9.gal  bullet_red.gal  bullet_yellow.gal  coin1.gal  coin2.gal  coin3.gal  collect_reward.gal  comet.gal  enemy1.gal  enemy2.gal  enemy3.gal  enemy4.gal  enemy5.gal  enemy6.gal  enemy_turret.gal  enemy_turret2.gal  explosion.gal  health.gal  healthView.gal  icon.gal  levelView.gal  level_up.gal  player.gal  scoreView.gal  star.gal  star2.gal  star3.gal  weapon_blue.gal  weapon_red.gal  weapon_yellow.gal
tests/: CMakeLists.txt  animandsoundeffectmodeltests.cpp  animationeffectmodeltests.cpp  backgroundmusicplayertests.cpp  bulletmodeltests.cpp  controlplanetests.cpp  definitions.hpp  enemycontrollertests.cpp  enemymodeltests.cpp  enemymodeltype1tests.cpp  enemymodeltype2tests.cpp  enemymodeltype3tests.cpp  enemymodeltype4tests.cpp  enemymodeltype5tests.cpp  enemymodeltype6tests.cpp  enemyturrettests.cpp  functionstests.cpp  generalviewtests.cpp  healthcontrollertests.cpp  healthmodeltests.cpp  healthviewtests.cpp  levelcontrollertests.cpp  levelmodeltests.cpp  levelviewtests.cpp  main.cpp  menucontrollertests.cpp  menumodeltests.cpp  playercontrollertests.cpp  playermodeltests.cpp  randomgeneratorstub.cpp  randomgeneratorstub.hpp  rewardcoinmodeltests.cpp  rewardcontrollertests.cpp  rewardmodeltests.cpp  rewardspecialmodeltests.cpp  scorecontrollertests.cpp  scoremodeltests.cpp  scoreviewtests.cpp  soundeffectmodeltests.cpp  utdefinitions.hpp
tests/mocks/: filemanagermock.hpp
tests/stubs/: backgroundmusicplayerstub.hpp  barviewstub.hpp  filemanagerstub.hpp  imagestoragestub.hpp  randomgeneratorstub.hpp  soundstoragestub.hpp
uml/: Class_diagram.drawio  Modules_diagram.drawio  Use_case_diagram.drawio  Use_case_diagram.xml
uml/activity_diagrams/: AbortGame.drawio  GameOver.drawio  PauseGame.drawio  PlayGame.drawio  ResumeGame.drawio  StartGame.drawio  StartGame.xml
uml/sequence_diagrams/: StartGame.drawio  StartGame.xml
uml/src/: AnimationEffectModel.xml  BackView.xml  BackgroundController.xml  BackgroundModel.xml  BulletModel.xml  EnemyController.xml  EnemyMVC.xml  EnemyModel.xml  EnemyModelTypeN.xml  FileManager.xml  FrontView.xml  GameObject.xml  GameView.xml  GeneralView.xml  GraphicsView.xml  HealthView.xml  IFileManager.xml  IImageStorage.xml  IRandomGenerator.xml  ISoundStorage.xml  ImageStorage.xml  LevelController.xml  LevelMVC.xml  LevelModel.xml  LevelView.xml  MenuController.xml  MenuMVC.xml  MenuModel.xml  MiddleView.xml  PlayerController.xml  PlayerMVC.xml  PlayerModel.xml  PushButton.xml  RandomGenerator.xml  RewardCoinModel.xml  RewardController.xml  RewardMVC.xml  RewardModel.xml  RewardSpecialModel.xml  ScoreController.xml  (+6 more)
