add_custom_target(app)
set(PROJECT_NAME galacticwar)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt5 REQUIRED COMPONENTS Core Widgets Gui Multimedia)

add_executable(${PROJECT_NAME} main.cpp
                               animationeffectmodel.hpp
                               animationeffectmodel.cpp
                               animationplaneview.hpp
                               animationplaneview.cpp
                               backgroundcontroller.hpp
                               backgroundcontroller.cpp
                               backgroundeffectmodel.hpp
                               backgroundeffectmodel.cpp
                               backgroundmusicplayer.hpp
                               backgroundmusicplayer.cpp
                               backgroundview.hpp
                               backgroundview.cpp
                               barview.hpp
                               barview.cpp
                               bulletmodel.hpp
                               bulletmodel.cpp
                               controlplane.hpp
                               controlplane.cpp
                               definitions.hpp
                               enemyconfiguration.hpp
                               enemycontroller.hpp
                               enemycontroller.cpp
                               enemymodel.hpp
                               enemymodel.cpp
                               enemymodeltype1.hpp
                               enemymodeltype1.cpp
                               enemymodeltype2.hpp
                               enemymodeltype2.cpp
                               enemymodeltype3.hpp
                               enemymodeltype3.cpp
                               enemymodeltype4.hpp
                               enemymodeltype4.cpp
                               enemymodeltype5.hpp
                               enemymodeltype5.cpp
                               enemymodeltype6.hpp
                               enemymodeltype6.cpp
                               enemyturret.hpp
                               enemyturret.cpp
                               enemyturretdoublecannon.hpp
                               enemyturretdoublecannon.cpp
                               enemyturrettriplecannon.hpp
                               enemyturrettriplecannon.cpp
                               filemanager.hpp
                               filemanager.cpp
                               firefunctions.hpp
                               firefunctions.cpp
                               functions.hpp
                               functions.cpp
                               gameobject.hpp
                               gameobject.cpp
                               gameplayview.hpp
                               gameplayview.cpp
                               graphicsview.hpp
                               graphicsview.cpp
                               healthcontroller.hpp
                               healthcontroller.cpp
                               healthmodel.hpp
                               healthmodel.cpp
                               ibackgroundmusicplayer.hpp
                               ifilemanager.hpp
                               iinterfaceview.hpp
                               iinterfaceview.cpp
                               iimagestorage.hpp
                               iimagestorage.cpp
                               isoundstorage.hpp
                               isoundstorage.cpp
                               imagestorage.hpp
                               imagestorage.cpp
                               irandomgenerator.hpp
                               label.hpp
                               label.cpp
                               labelview.hpp
                               labelview.cpp
                               levelcontroller.hpp
                               levelcontroller.cpp
                               levelmodel.hpp
                               levelmodel.cpp
                               menucontroller.hpp
                               menucontroller.cpp
                               menumodel.hpp
                               menumodel.cpp
                               menuview.hpp
                               menuview.cpp
                               playercontroller.hpp
                               playercontroller.cpp
                               playermodel.hpp
                               playermodel.cpp
                               pushbutton.hpp
                               pushbutton.cpp
                               randomgenerator.hpp
                               randomgenerator.cpp
                               rewardcontroller.hpp
                               rewardcontroller.cpp
                               rewardmodel.hpp
                               rewardmodel.cpp
                               rewardcoinmodel.hpp
                               rewardcoinmodel.cpp
                               rewardspecialmodel.hpp
                               rewardspecialmodel.cpp
                               rewardtypes.hpp
                               scorecontroller.hpp
                               scorecontroller.cpp
                               scoremodel.hpp
                               scoremodel.cpp
                               soundeffectmodel.hpp
                               soundeffectmodel.cpp
                               soundstorage.hpp
                               soundstorage.cpp
                               weapons.hpp
                               weapons.cpp
                               weapontype.hpp)

target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Widgets Qt5::Gui Qt5::Multimedia)
add_dependencies(app ${PROJECT_NAME})
